[gd_scene load_steps=10 format=3 uid="uid://cgmxqvgrif72i"]

[ext_resource type="Texture2D" uid="uid://diqoyuxof3l2y" path="res://assets/Graveyard [16x16]/Tiles/Back_Tiles.png" id="1_ehai5"]
[ext_resource type="PackedScene" uid="uid://edm6nmqory0u" path="res://scenes/player.tscn" id="1_fetmv"]
[ext_resource type="Script" path="res://scripts/game.gd" id="1_fh3mm"]
[ext_resource type="Script" path="res://scripts/game_manager.gd" id="1_miwdl"]
[ext_resource type="PackedScene" uid="uid://cg21j00uc5snu" path="res://scenes/enemy_spawner.tscn" id="3_47it5"]
[ext_resource type="PackedScene" uid="uid://n8axcln7ig0r" path="res://scenes/pause_menu.tscn" id="5_mq50j"]
[ext_resource type="AudioStream" uid="uid://dy8xhqtsfxjc8" path="res://assets/music/Danmaku of Souls - Level theme.wav" id="7_f8g8j"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_n6avj"]
texture = ExtResource("1_ehai5")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0 = 0
5:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_0/angular_velocity = 0.0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:0/0 = 0
6:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:0/0/physics_layer_0/angular_velocity = 0.0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:0/0 = 0
7:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:0/0/physics_layer_0/angular_velocity = 0.0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:0/0 = 0
8:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:0/0/physics_layer_0/angular_velocity = 0.0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:0/0 = 0
9:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:0/0/physics_layer_0/angular_velocity = 0.0
9:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0 = 0
5:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:1/0/physics_layer_0/angular_velocity = 0.0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:1/0 = 0
6:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:1/0/physics_layer_0/angular_velocity = 0.0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:1/0 = 0
7:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:1/0/physics_layer_0/angular_velocity = 0.0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:1/0 = 0
8:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:1/0/physics_layer_0/angular_velocity = 0.0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:1/0 = 0
9:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:1/0/physics_layer_0/angular_velocity = 0.0
9:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:2/0 = 0
4:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:2/0/physics_layer_0/angular_velocity = 0.0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:2/0 = 0
5:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:2/0/physics_layer_0/angular_velocity = 0.0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:2/0 = 0
6:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:2/0/physics_layer_0/angular_velocity = 0.0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:2/0 = 0
7:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:2/0/physics_layer_0/angular_velocity = 0.0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:2/0 = 0
8:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:2/0/physics_layer_0/angular_velocity = 0.0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:2/0 = 0
9:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:2/0/physics_layer_0/angular_velocity = 0.0
9:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:2/0 = 0
10:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:2/0/physics_layer_0/angular_velocity = 0.0
10:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:3/0 = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:3/0 = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:3/0 = 0
3:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_0/angular_velocity = 0.0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:3/0 = 0
4:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:3/0/physics_layer_0/angular_velocity = 0.0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:3/0 = 0
5:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:3/0/physics_layer_0/angular_velocity = 0.0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:3/0 = 0
6:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:3/0/physics_layer_0/angular_velocity = 0.0
6:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:3/0 = 0
7:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:3/0/physics_layer_0/angular_velocity = 0.0
7:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:3/0 = 0
8:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:3/0/physics_layer_0/angular_velocity = 0.0
8:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:3/0 = 0
9:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:3/0/physics_layer_0/angular_velocity = 0.0
9:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:3/0 = 0
10:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:3/0/physics_layer_0/angular_velocity = 0.0
10:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:4/0 = 0
4:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:4/0/physics_layer_0/angular_velocity = 0.0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:4/0 = 0
5:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:4/0/physics_layer_0/angular_velocity = 0.0
5:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:4/0 = 0
6:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:4/0/physics_layer_0/angular_velocity = 0.0
6:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:4/0 = 0
7:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:4/0/physics_layer_0/angular_velocity = 0.0
7:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:4/0 = 0
8:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:4/0/physics_layer_0/angular_velocity = 0.0
8:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_w0qbn"]
physics_layer_0/collision_layer = 6
physics_layer_0/collision_mask = 6
sources/0 = SubResource("TileSetAtlasSource_n6avj")

[node name="Game" type="Node2D"]
script = ExtResource("1_fh3mm")

[node name="GameManager" type="Node" parent="."]
script = ExtResource("1_miwdl")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_w0qbn")
format = 2
layer_0/tile_data = PackedInt32Array(-589842, 327680, 1, -851986, 65536, 1, -786450, 65536, 1, -720914, 65536, 1, -655378, 65536, 1, -851985, 65536, 1, -786449, 65536, 1, -720913, 65536, 1, -655377, 65536, 1, -851984, 65536, 1, -786448, 65536, 1, -720912, 65536, 1, -655376, 65536, 1, -851983, 65536, 1, -786447, 65536, 1, -720911, 65536, 1, -655375, 65536, 1, -851982, 65536, 1, -786446, 65536, 1, -720910, 65536, 1, -655374, 65536, 1, -851981, 65536, 1, -786445, 65536, 1, -720909, 65536, 1, -655373, 65536, 1, -851980, 65536, 1, -786444, 65536, 1, -720908, 65536, 1, -655372, 65536, 1, -851979, 65536, 1, -786443, 65536, 1, -720907, 65536, 1, -655371, 65536, 1, -851978, 65536, 1, -786442, 65536, 1, -720906, 65536, 1, -655370, 65536, 1, -851977, 65536, 1, -786441, 65536, 1, -720905, 65536, 1, -655369, 65536, 1, -851976, 65536, 1, -786440, 65536, 1, -720904, 65536, 1, -655368, 65536, 1, -851975, 65536, 1, -786439, 65536, 1, -720903, 65536, 1, -655367, 65536, 1, -851974, 65536, 1, -786438, 65536, 1, -720902, 65536, 1, -655366, 65536, 1, -851973, 65536, 1, -786437, 65536, 1, -720901, 65536, 1, -655365, 65536, 1, -851972, 65536, 1, -786436, 65536, 1, -720900, 65536, 1, -655364, 65536, 1, -851971, 65536, 1, -786435, 65536, 1, -720899, 65536, 1, -655363, 65536, 1, -851970, 65536, 1, -786434, 65536, 1, -720898, 65536, 1, -655362, 65536, 1, -851969, 65536, 1, -786433, 65536, 1, -720897, 65536, 1, -655361, 65536, 1, -917504, 65536, 1, -851968, 65536, 1, -786432, 65536, 1, -720896, 65536, 1, -917503, 65536, 1, -851967, 65536, 1, -786431, 65536, 1, -720895, 65536, 1, -917502, 65536, 1, -851966, 65536, 1, -786430, 65536, 1, -720894, 65536, 1, -917501, 65536, 1, -851965, 65536, 1, -786429, 65536, 1, -720893, 65536, 1, -917500, 65536, 1, -851964, 65536, 1, -786428, 65536, 1, -720892, 65536, 1, -917499, 65536, 1, -851963, 65536, 1, -786427, 65536, 1, -720891, 65536, 1, -917498, 65536, 1, -851962, 65536, 1, -786426, 65536, 1, -720890, 65536, 1, -917497, 65536, 1, -851961, 65536, 1, -786425, 65536, 1, -720889, 65536, 1, -917496, 65536, 1, -851960, 65536, 1, -786424, 65536, 1, -720888, 65536, 1, -917495, 65536, 1, -851959, 65536, 1, -786423, 65536, 1, -720887, 65536, 1, -917494, 65536, 1, -851958, 65536, 1, -786422, 65536, 1, -720886, 65536, 1, -917493, 65536, 1, -851957, 65536, 1, -786421, 65536, 1, -720885, 65536, 1, -917492, 65536, 1, -851956, 65536, 1, -786420, 65536, 1, -720884, 65536, 1, -917491, 65536, 1, -851955, 65536, 1, -786419, 65536, 1, -720883, 65536, 1, -917490, 65536, 1, -851954, 65536, 1, -786418, 65536, 1, -720882, 65536, 1, -917489, 65536, 1, -851953, 65536, 1, -786417, 65536, 1, -720881, 65536, 1, -917488, 65536, 1, -851952, 65536, 1, -786416, 65536, 1, -720880, 65536, 1, -851991, 65536, 1, -786455, 65536, 1, -720919, 65536, 1, -655383, 65536, 1, -589847, 65536, 1, -524311, 65536, 1, -458775, 65536, 1, -393239, 65536, 1, -327703, 65536, 1, -262167, 65536, 1, -196631, 65536, 1, -131095, 65536, 1, -65559, 65536, 1, -23, 65536, 1, 65513, 65536, 1, 131049, 65536, 1, 196585, 65536, 1, 262121, 65536, 1, 327657, 65536, 1, 393193, 65536, 1, 458729, 65536, 1, 524265, 65536, 1, 589801, 65536, 1, -851990, 65536, 1, -786454, 65536, 1, -720918, 65536, 1, -655382, 65536, 1, -589846, 65536, 1, -524310, 65536, 1, -458774, 65536, 1, -393238, 65536, 1, -327702, 65536, 1, -262166, 65536, 1, -196630, 65536, 1, -131094, 65536, 1, -65558, 65536, 1, -22, 65536, 1, 65514, 65536, 1, 131050, 65536, 1, 196586, 65536, 1, 262122, 65536, 1, 327658, 65536, 1, 393194, 65536, 1, 458730, 65536, 1, 524266, 65536, 1, 589802, 65536, 1, -851989, 65536, 1, -786453, 65536, 1, -720917, 65536, 1, -655381, 65536, 1, -589845, 65536, 1, -524309, 65536, 1, -458773, 65536, 1, -393237, 65536, 1, -327701, 65536, 1, -262165, 65536, 1, -196629, 65536, 1, -131093, 65536, 1, -65557, 65536, 1, -21, 65536, 1, 65515, 65536, 1, 131051, 65536, 1, 196587, 65536, 1, 262123, 65536, 1, 327659, 65536, 1, 393195, 65536, 1, 458731, 65536, 1, 524267, 65536, 1, 589803, 65536, 1, -851988, 65536, 1, -786452, 65536, 1, -720916, 65536, 1, -655380, 65536, 1, -589844, 65536, 1, -524308, 65536, 1, -458772, 65536, 1, -393236, 65536, 1, -327700, 65536, 1, -262164, 65536, 1, -196628, 65536, 1, -131092, 65536, 1, -65556, 65536, 1, -20, 65536, 1, 65516, 65536, 1, 131052, 65536, 1, 196588, 65536, 1, 262124, 65536, 1, 327660, 65536, 1, 393196, 65536, 1, 458732, 65536, 1, 524268, 65536, 1, 589804, 65536, 1, -851987, 65536, 1, -786451, 65536, 1, -720915, 65536, 1, -655379, 65536, 1, -589843, 65536, 1, -524307, 65536, 1, -458771, 65536, 1, -393235, 65536, 1, -327699, 65536, 1, -262163, 65536, 1, -196627, 65536, 1, -131091, 65536, 1, -65555, 65536, 1, -19, 65536, 1, 65517, 65536, 1, 131053, 65536, 1, 196589, 65536, 1, 262125, 65536, 1, 327661, 65536, 1, 393197, 65536, 1, 458733, 65536, 1, 524269, 65536, 1, 589805, 65536, 1, 655337, 65536, 1, 720873, 65536, 1, 786409, 65536, 1, 851945, 65536, 1, 917481, 65536, 1, 655338, 65536, 1, 720874, 65536, 1, 786410, 65536, 1, 851946, 65536, 1, 917482, 65536, 1, 655339, 65536, 1, 720875, 65536, 1, 786411, 65536, 1, 851947, 65536, 1, 917483, 65536, 1, 655340, 65536, 1, 720876, 65536, 1, 786412, 65536, 1, 851948, 65536, 1, 917484, 65536, 1, 655341, 65536, 1, 720877, 65536, 1, 786413, 65536, 1, 851949, 65536, 1, 917485, 65536, 1, 655342, 327680, 2, 720878, 65536, 1, 786414, 65536, 1, 851950, 65536, 1, 917486, 65536, 1, 655343, 65536, 805306370, 720879, 65536, 1, 786415, 65536, 1, 851951, 65536, 1, 917487, 65536, 1, 655344, 65536, 805306370, 720880, 65536, 1, 786416, 65536, 1, 851952, 65536, 1, 917488, 65536, 1, 655345, 65536, 805306370, 720881, 65536, 1, 786417, 65536, 1, 851953, 65536, 1, 917489, 65536, 1, 655346, 65536, 805306370, 720882, 65536, 1, 786418, 65536, 1, 851954, 65536, 1, 917490, 65536, 1, 655347, 65536, 805306370, 720883, 65536, 1, 786419, 65536, 1, 851955, 65536, 1, 917491, 65536, 1, 655348, 65536, 805306370, 720884, 65536, 1, 786420, 65536, 1, 851956, 65536, 1, 917492, 65536, 1, 655349, 65536, 805306370, 720885, 65536, 1, 786421, 65536, 1, 851957, 65536, 1, 917493, 65536, 1, 655350, 65536, 805306370, 720886, 65536, 1, 786422, 65536, 1, 851958, 65536, 1, 917494, 65536, 1, 655351, 65536, 805306370, 720887, 65536, 1, 786423, 65536, 1, 851959, 65536, 1, 917495, 65536, 1, 655352, 65536, 805306370, 720888, 65536, 1, 786424, 65536, 1, 851960, 65536, 1, 917496, 65536, 1, 655353, 65536, 805306370, 720889, 65536, 1, 786425, 65536, 1, 851961, 65536, 1, 917497, 65536, 1, 655354, 65536, 805306370, 720890, 65536, 1, 786426, 65536, 1, 851962, 65536, 1, 917498, 65536, 1, 655355, 65536, 805306370, 720891, 65536, 1, 786427, 65536, 1, 851963, 65536, 1, 917499, 65536, 1, 655356, 65536, 805306370, 720892, 65536, 1, 786428, 65536, 1, 851964, 65536, 1, 917500, 65536, 1, 655357, 65536, 805306370, 720893, 65536, 1, 786429, 65536, 1, 851965, 65536, 1, 917501, 65536, 1, 655358, 65536, 805306370, 720894, 65536, 1, 786430, 65536, 1, 851966, 65536, 1, 917502, 65536, 1, 655359, 65536, 805306370, 720895, 65536, 1, 786431, 65536, 1, 851967, 65536, 1, 917503, 65536, 1, 589824, 65536, 805306370, 655360, 65536, 1, 720896, 65536, 1, 786432, 65536, 1, 851968, 65536, 1, 589825, 65536, 805306370, 655361, 65536, 1, 720897, 65536, 1, 786433, 65536, 1, 851969, 65536, 1, 589826, 65536, 805306370, 655362, 65536, 1, 720898, 65536, 1, 786434, 65536, 1, 851970, 65536, 1, 589827, 65536, 805306370, 655363, 65536, 1, 720899, 65536, 1, 786435, 65536, 1, 851971, 65536, 1, 589828, 65536, 805306370, 655364, 65536, 1, 720900, 65536, 1, 786436, 65536, 1, 851972, 65536, 1, 589829, 65536, 805306370, 655365, 65536, 1, 720901, 65536, 1, 786437, 65536, 1, 851973, 65536, 1, 589830, 65536, 805306370, 655366, 65536, 1, 720902, 65536, 1, 786438, 65536, 1, 851974, 65536, 1, 589831, 65536, 805306370, 655367, 65536, 1, 720903, 65536, 1, 786439, 65536, 1, 851975, 65536, 1, 589832, 65536, 805306370, 655368, 65536, 1, 720904, 65536, 1, 786440, 65536, 1, 851976, 65536, 1, 589833, 65536, 805306370, 655369, 65536, 1, 720905, 65536, 1, 786441, 65536, 1, 851977, 65536, 1, 589834, 65536, 805306370, 655370, 65536, 1, 720906, 65536, 1, 786442, 65536, 1, 851978, 65536, 1, 589835, 65536, 805306370, 655371, 65536, 1, 720907, 65536, 1, 786443, 65536, 1, 851979, 65536, 1, 589836, 65536, 805306370, 655372, 65536, 1, 720908, 65536, 1, 786444, 65536, 1, 851980, 65536, 1, 589837, 65536, 805306370, 655373, 65536, 1, 720909, 65536, 1, 786445, 65536, 1, 851981, 65536, 1, 589838, 65536, 805306370, 655374, 65536, 1, 720910, 65536, 1, 786446, 65536, 1, 851982, 65536, 1, 589839, 65536, 805306370, 655375, 65536, 1, 720911, 65536, 1, 786447, 65536, 1, 851983, 65536, 1, 589840, 65536, 805306370, 655376, 65536, 1, 720912, 65536, 1, 786448, 65536, 1, 851984, 65536, 1, -786415, 65536, 1, -720879, 65536, 1, -655343, 393216, 1, 589841, 393216, 2, 655377, 65536, 1, 720913, 65536, 1, 786449, 65536, 1, 851985, 65536, 1, -786414, 65536, 1, -720878, 65536, 1, -655342, 65536, 1, -589806, 65536, 1, -524270, 65536, 1, -458734, 65536, 1, -393198, 65536, 1, -327662, 65536, 1, -262126, 65536, 1, -196590, 65536, 1, -131054, 65536, 1, -65518, 65536, 1, 18, 65536, 1, 65554, 65536, 1, 131090, 65536, 1, 196626, 65536, 1, 262162, 65536, 1, 327698, 65536, 1, 393234, 65536, 1, 458770, 65536, 1, 524306, 65536, 1, 589842, 65536, 1, 655378, 65536, 1, 720914, 65536, 1, 786450, 65536, 1, 851986, 65536, 1, -786413, 65536, 1, -720877, 65536, 1, -655341, 65536, 1, -589805, 65536, 1, -524269, 65536, 1, -458733, 65536, 1, -393197, 65536, 1, -327661, 65536, 1, -262125, 65536, 1, -196589, 65536, 1, -131053, 65536, 1, -65517, 65536, 1, 19, 65536, 1, 65555, 65536, 1, 131091, 65536, 1, 196627, 65536, 1, 262163, 65536, 1, 327699, 65536, 1, 393235, 65536, 1, 458771, 65536, 1, 524307, 65536, 1, 589843, 65536, 1, 655379, 65536, 1, 720915, 65536, 1, 786451, 65536, 1, 851987, 65536, 1, -786412, 65536, 1, -720876, 65536, 1, -655340, 65536, 1, -589804, 65536, 1, -524268, 65536, 1, -458732, 65536, 1, -393196, 65536, 1, -327660, 65536, 1, -262124, 65536, 1, -196588, 65536, 1, -131052, 65536, 1, -65516, 65536, 1, 20, 65536, 1, 65556, 65536, 1, 131092, 65536, 1, 196628, 65536, 1, 262164, 65536, 1, 327700, 65536, 1, 393236, 65536, 1, 458772, 65536, 1, 524308, 65536, 1, 589844, 65536, 1, 655380, 65536, 1, 720916, 65536, 1, 786452, 65536, 1, 851988, 65536, 1, -786411, 65536, 1, -720875, 65536, 1, -655339, 65536, 1, -589803, 65536, 1, -524267, 65536, 1, -458731, 65536, 1, -393195, 65536, 1, -327659, 65536, 1, -262123, 65536, 1, -196587, 65536, 1, -131051, 65536, 1, -65515, 65536, 1, 21, 65536, 1, 65557, 65536, 1, 131093, 65536, 1, 196629, 65536, 1, 262165, 65536, 1, 327701, 65536, 1, 393237, 65536, 1, 458773, 65536, 1, 524309, 65536, 1, 589845, 65536, 1, 655381, 65536, 1, 720917, 65536, 1, 786453, 65536, 1, 851989, 65536, 1, -917487, 65536, 1, -851951, 65536, 1, -917486, 65536, 1, -851950, 65536, 1, -917485, 65536, 1, -851949, 65536, 1, -917484, 65536, 1, -851948, 65536, 1, -917483, 65536, 1, -851947, 65536, 1, -524306, 65536, 1610612738, -458770, 65536, 1610612738, -393234, 65536, 1610612738, -327698, 65536, 1610612738, -262162, 65536, 1610612738, -196626, 65536, 1610612738, -131090, 65536, 1610612738, -65554, 65536, 1610612738, -18, 65536, 1610612738, 65518, 65536, 1610612738, 131054, 65536, 1610612738, 196590, 65536, 1610612738, 262126, 65536, 1610612738, 327662, 65536, 1610612738, 393198, 65536, 1610612738, 458734, 65536, 1610612738, 524270, 65536, 1610612738, 589806, 65536, 1610612738, -589841, 65536, 2, -589840, 65536, 2, -589839, 65536, 2, -589838, 65536, 2, -589837, 65536, 2, -589836, 65536, 2, -589835, 65536, 2, -589834, 65536, 2, -589833, 65536, 2, -589832, 65536, 2, -589831, 65536, 2, -589830, 65536, 2, -589829, 65536, 2, -589828, 65536, 2, -589827, 65536, 2, -589826, 65536, 2, -589825, 65536, 2, -655360, 65536, 2, -655359, 65536, 2, -655358, 65536, 2, -655357, 65536, 2, -655356, 65536, 2, -655355, 65536, 2, -655354, 65536, 2, -655353, 65536, 2, -655352, 65536, 2, -655351, 65536, 2, -655350, 65536, 2, -655349, 65536, 2, -655348, 65536, 2, -655347, 65536, 2, -655346, 65536, 2, -655345, 65536, 2, -655344, 65536, 2, -589807, 65536, 1342177282, -524271, 65536, 1342177282, -458735, 65536, 1342177282, -393199, 65536, 1342177282, -327663, 65536, 1342177282, -262127, 65536, 1342177282, -196591, 65536, 1342177282, -131055, 65536, 1342177282, -65519, 65536, 1342177282, 17, 65536, 1342177282, 65553, 65536, 1342177282, 131089, 65536, 1342177282, 196625, 65536, 1342177282, 262161, 65536, 1342177282, 327697, 65536, 1342177282, 393233, 65536, 1342177282, 458769, 65536, 1342177282, 524305, 65536, 1342177282)

[node name="Player" parent="." instance=ExtResource("1_fetmv")]
position = Vector2(0, 1)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3, 3)

[node name="Enemy_Spawner_Top" parent="." instance=ExtResource("3_47it5")]
position = Vector2(0, -230)

[node name="Enemy_Spawner_Bottom" parent="." instance=ExtResource("3_47it5")]
position = Vector2(0, 240)

[node name="Enemy_Spawner_Left" parent="." instance=ExtResource("3_47it5")]
position = Vector2(-376, 0)

[node name="Enemy_Spawner_Right" parent="." instance=ExtResource("3_47it5")]
position = Vector2(386, 0)

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Pause_Menu" parent="." instance=ExtResource("5_mq50j")]
visible = false
z_index = 100

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_f8g8j")
autoplay = true

[connection signal="timeout" from="Timer" to="GameManager" method="_on_timer_timeout"]
